--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "vite",
     "build": "vite build",
     "build:dev": "vite build --mode development",
+	"build:android": "npm run build && npx cap sync android && cd android && ./gradlew installDebug",
     "lint": "eslint .",
     "preview": "vite preview"
   },
